--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -14,9 +14,10 @@
 
     {% for skill in skills.toolset %}
     <div class="item">
-
-      <h3 class="upper-row">{{ skill.name }}</h3>
-
+      
+      <div class="upper-row">
+        <h3 class="name">{{ skill.name }}</h3>
+      </div>
 <!--       <div class="level-bar">
         <div class="level-bar-inner" data-level="{{ skill.level }}">
         </div>
